menu icon added

--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ h1{
     text-align: center;
     color: aquamarine;
 }
+.gg-menu{
+    padding:top;
+}
+.gg-arrows-expand-right{
+    padding: auto;
+}
