--- a/style.css
+++ b/style.css
@@ -1,20 +1,6 @@
-h1{
-    text-align: center;
-    color: aquamarine;
-}
-.gg-menu{
-    padding:20px;
-    left: 0;
-}
-.gg-arrows-expand-right{
-    padding: auto;
-}
-#icon{
-    padding: 30px;
-    right:0;
-}
-.icon{
-    display: inline;
-    margin-top: 10%;
-    background-color: aqua;
+
+.icon i{
+    display: inline-block;
+    background-color: aliceblue;
+    padding: 20px;
 }
