--- a/style.css
+++ b/style.css
@@ -48,7 +48,37 @@ nav{
     box-shadow: 0 0 10px rgba(0, 0,0,0.2) ;
     justify-content: space-between;
     background: #fff;
-    position: static;
+    position: sticky;
     top: 0;
     z-index: 10;
 }
+/*---------------- sidebar---------------------- */
+.sidebar
+{
+    position: fixed;
+    background: #fff;
+    width: 15%;
+    height: 100vh;
+    padding-left: 2%;
+    padding-top: 80px;
+    top: 0;
+}
+.shortcutlinks a
+{
+width: fixed;
+display: flex;
+align-items: center;
+margin-bottom: 20px;
+flex-wrap: wrap;
+}
+
+.shortcutlinks span{
+width: 20px;
+margin-right: 10px;
+}
+
+
+
+
+
+
