--- a/style.css
+++ b/style.css
@@ -62,8 +62,13 @@ nav{
     padding-left: 2%;
     padding-top: 80px;
     top: 0;
+
+
+    
+       
+      
 }
-.shortcutlinks a
+  .shortcutlinks a
 {
 width: fixed;
 display: flex;
@@ -78,6 +83,21 @@ margin-right: 10px;
 }
 
 
+.shortcutlinks
+{
+    display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.nav-left :hover .shortcutlinks{
+    display: block;
+}
+.sidebar:hover .gg-menu{
+    {background-color: #3e8e41;}
+}
 
 
 
