--- a/style.css
+++ b/style.css
@@ -110,7 +110,43 @@ margin-right: 10px;
     background-color: #3e8e41;
 }
 
-
+/*--------------main----------------------*/
+   .container{
+    background-color: #f9f9f9;
+    padding-left: 17%;
+    padding-right: 1%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+   }
+   .banner{
+    
+    width: 100%;
+    height: 200px;
+   overflow: hidden;
+   
+   
+   }
+   .banner img{
+    width: 100%;
+    max-height: 200px;
+    border-radius: 8px;
+    object-fit: cover;
+   }
+   .listcontainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid: column gap 16px; 
+    grid-row-gap: 30px;
+    margin-top: 20px;
+   }
+   .vidlist img{
+    width: 100%;
+    border-radius: 5%;
+   }
+   .vidlist .flex-div{
+    align-items: flex-start;
+    margin-top: 7px;
+   }
 
 
 
